# Showcase

./: .coveragerc  .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.bat
agents/: __init__.py  app.py  deployment_agent.py  integration.py  model.py  pipeline_agent.py
agents/generation/: content_generator.py  generation_agent.py
agents/middleware/: data_preprocessor.py
agents/orchestrator/: __init__.py  orchestrator_agent.py
agents/teams/: __init__.py  customization_team.py  generation_team.py  parsing_team.py  portfolio_team.py
agents/tools/: __init__.py  code_tools.py  file_tools.py  template_tools.py
agents/validation/: validation_agent.py  validator.py
alembic/: env.py
app/: ai_pipeline.py  chat.py  database.py  exceptions.py  main.py  models.py  tasks.py
app/adapters/: database.py  gemini_adapter.py
app/ai_providers/: gemini_adapter.py
app/api/: dependencies.py  routes.py
app/api/v1/: deploy.py  portfolio.py
app/core/: config.py  logging.py
app/frontend_generator/: generator.py
app/middleware/: __init__.py  exception_handler.py
app/models/: __init__.py
app/ocr/: ocr_adapter.py
app/schemas/: responses.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx
frontend/src/api/: client.js
frontend/src/components/: Header.tsx  JobDetails.jsx  JobList.jsx  TemplateRenderer.tsx  UploadForm.jsx
frontend/src/pages/: Editor.tsx
frontend/src/pages/auth/github/: callback.tsx
frontend/src/templates/one_temp/: App.tsx
frontend/src/templates/two_temp/: App.tsx
frontend_generator/: generate.js  package-lock.json  package.json
scripts/: setup.ps1  setup.sh  test_gemini_key.py  test_rate_limiter.py
tests/: check_models.py  test_api.py
tests/debug/: README.md
